# Blockchain

./: Cargo.toml  README.md  data.proto
dummy_grpc/: .readme.md.kate-swp  client.js  package-lock.json  package.json  readme.md  server.js
src/: lib.rs  main.rs
src/balances/: mod.rs
src/bip/: bip39.rs  memonics.rs  mod.rs
src/blockchain/: mod.rs
src/consesus/: mod.rs  proof_of_work.rs
src/test/: mod.rs
src/utilities/: mod.rs
